--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.8",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "bootstrap": "^5.3.6",
+        "laravel-vite-plugin": "^1.2.0",
+        "sass": "^1.89.0",
+        "vite": "^6.3.5"
     }
 }
